- Rename ``android.Sentry`` to ``android.AndroidSentry`` to make it unambiguous when used in code.
- Rename ``sentryFactory`` option to ``factory`` so that the environment variable configuration is
  now ``SENTRY_FACTORY`` and the Java System Property is ``sentry.factory``.
- Add ``dist`` field to Event.
- Compressed JSON payloads are no longer base64 encoded.

Version 8.0.2
-------------

- Add user breadcrumb type. (thanks NLthijs48)
- Add getter for underlying ``Event`` in ``EventBuilder`` so that helpers can read fields. (thanks anjo-swe)

Version 8.0.1
-------------

- Fix setting the ``RavenFactory`` via Java System Properties or environment variables.
- Fix message interface errors in log4j2 integration.

Version 8.0.0
-------------

- Remove ``DefaultRavenFactory.getNotInAppFrames()`` blacklist in favor of a new whitelist method,
  ``DefaultRavenFactory.getInAppFrames(Dsn dsn)``.
- Add ``raven.stacktrace.app.packages`` DSN option for configuring your application's package prefixes.
- Fix so that system properties and environment variables always override hardcoded logger configuration for settings
  such as release, environment, etc.
- Fix Raven initialization so that slf4j doesn't emit log replay warning on startup.
- Changed ``Breadcrumb`` and `BreadcrumbBuilder`` to use enums for some fields.

Version 7.8.6
-------------

- Automatically collect device information in ``contexts`` field on Android.
- Updated Jackson, slf4j, log4j2 and logback dependencies.

Version 7.8.5
-------------

- Add optional ``body`` field to HttpInterface.
- Fix name of the lockdown logger.

Version 7.8.4
-------------

- Add ``contexts`` field support to Events.
- Add ``com.getsentry.raven.Raven.lockdown`` logger that can be disabled to ignore warning messages
  on each attempted Event send when Raven is in lockdown mode.

Version 7.8.3
-------------

- Add User to RavenContext and ContextBuilderHelper. (thanks mpecan)